<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

<shortcut
    android:shortcutId="shield_on"
    android:enabled="true"
    android:icon="@drawable/ic_shortcut_shield_on"
    android:shortcutShortLabel="@string/shortcut_shield_on_short"
    android:shortcutLongLabel="@string/shortcut_shield_on_long"
    android:shortcutDisabledMessage="@string/shortcut_unavailable">

    <intent
        android:action="com.mende.dontspoilerfyme.SHIELD_ON"
        android:targetClass="com.mende.dontspoilerfyme.MainActivity" />
</shortcut>

<shortcut
    android:shortcutId="shield_off"
    android:enabled="true"
    android:icon="@drawable/ic_shortcut_shield_off"
    android:shortcutShortLabel="@string/shortcut_shield_off_short"
    android:shortcutLongLabel="@string/shortcut_shield_off_long"
    android:shortcutDisabledMessage="@string/shortcut_unavailable">

    <intent
        android:action="com.mende.dontspoilerfyme.SHIELD_OFF"
        android:targetClass="com.mende.dontspoilerfyme.MainActivity" />
</shortcut>

</shortcuts>
